--- a/app/views/products/_new.html.erb
+++ b/app/views/products/_new.html.erb
@@ -40,7 +40,7 @@
           <%= form.text_field :category, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
                               placeholder: "Category", required: "" %>
         </div>
-        <%# category %>
+        <%# description %>
         <div>
           <label for="description"
                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
@@ -50,7 +50,7 @@
         <%# action buttons %>
         <div class="bottom-0 left-0 flex justify-center w-full pb-4 space-x-4 md:px-4 md:absolute">
           <%# Add product button %>
-          <%= form.submit "Add Product", class: "text-white w-full justify-center bg-blue-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" %>
+          <%= form.submit class: "text-white w-full justify-center bg-blue-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" %>
           <%# Cancel button %>
           <button type="button" data-drawer-dismiss="drawer-create-product-default"
                   aria-controls="drawer-create-product-default"
