--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
   <%= render partial: 'dashboard/sidebar' %>
 
   <div class="fixed inset-0 z-10 hidden bg-gray-900/50" id="sidebarBackdrop"></div>
-  <div id="main-content" class="relative w-full h-full overflow-y-auto  lg:ml-64">
+  <div id="main-content" class="mb-20 relative w-full h-full overflow-y-auto  lg:ml-64">
     <main>
       <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5 dark:bg-gray-800 dark:border-gray-700">
         <div class="w-full mb-1">
@@ -24,18 +24,6 @@
                     </svg>
                     Home
                   </a>
-                </li>
-                <li>
-                  <div class="flex items-center">
-                    <svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                         xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd"
-                            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                    <a href="#"
-                       class="ml-1 text-gray-700 hover:text-primary-600 md:ml-2 dark:text-gray-300 dark:hover:text-white">E-commerce</a>
-                  </div>
                 </li>
                 <li>
                   <div class="flex items-center">
@@ -158,7 +146,7 @@
                     </div>
                     <%# Price %>
                     <div class="price">
-                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= product.price %>
+                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= product.price.to_i ? product.price.to_i : product.price  %>
                         DA
                       </td>
                     </div>
