styling login & signup & forgotting password pages

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,44 +1,18 @@
 <body class="bg-gray-50 dark:bg-gray-800">
 
-    <%= render partial: 'navigation' %>
+    <%#= render partial: 'navigation' %>
 
         <div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
 
-            <%= render partial: 'sidebar' %>
+            <%#= render partial: 'sidebar' %>
 
-                <%= render partial: 'home' %>
-
-
-
+                <%#= render partial: 'home' %>
 
         </div>
-
-
 
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
         <script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
 
-        <svg id="SvgjsSvg1001" width="2" height="0" xmlns="http://www.w3.org/2000/svg" version="1.1"
-            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev"
-            style="overflow: hidden; top: -100%; left: -100%; position: absolute; opacity: 0;">
-            <defs id="SvgjsDefs1002"></defs>
-            <polyline id="SvgjsPolyline1003" points="0,0"></polyline>
-            <path id="SvgjsPath1004" d="M0 0 "></path>
-        </svg>
-        <div id="volume-booster-visusalizer">
-            <div class="sound">
-                <div class="sound-icon"></div>
-                <div class="sound-wave sound-wave_one"></div>
-                <div class="sound-wave sound-wave_two"></div>
-                <div class="sound-wave sound-wave_three"></div>
-            </div>
-            <div class="segments-box">
-                <div data-range="1-20" class="segment"><span></span></div>
-                <div data-range="21-40" class="segment"><span></span></div>
-                <div data-range="41-60" class="segment"><span></span></div>
-                <div data-range="61-80" class="segment"><span></span></div>
-                <div data-range="81-100" class="segment"><span></span></div>
-            </div>
-        </div>
 </body>
+
