--- a/app/views/user/tasks/_navigation.html.erb
+++ b/app/views/user/tasks/_navigation.html.erb
@@ -12,7 +12,7 @@
         </button>
         <a href="" class="flex ml-2 md:mr-24">
           <img src="https://www.svgrepo.com/show/418102/todo.svg" class="h-8 mr-3" alt="TodoList Logo">
-          <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
+          <span class="self-center text-xl text-blue font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
         </a>
         <form action="#" method="GET" class="hidden lg:block lg:pl-3.5">
           <label for="topbar-search" class="sr-only">Search</label>
