--- a/app/views/user/tasks/edit.html.erb
+++ b/app/views/user/tasks/edit.html.erb
@@ -11,8 +11,8 @@
 
 <br>
     <div class="flex flex-col space-y-4">
-      <%= link_to "Show this task", @task, class: "text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
-      <%= link_to "Back to tasks", tasks_path, class:"text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
+      <%= link_to "Show this task", user_task_path(@task), class: "text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
+      <%= link_to "Back to tasks", user_tasks_path, class: "text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
     </div>
   </div>
 </div>
