--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @product) do |form| %>
+<%= form_with(model: [:admin, product]) do |form| %>
   <form>
     <div class="space-y-4">
 
@@ -41,9 +41,7 @@
           Cancel
         </button>
       </div>
-
     </div>
   </form>
-
 <% end %>
 
