--- a/app/views/user/tasks/_form.html.erb
+++ b/app/views/user/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: task) do |form| %>
+<%= form_with(model: [:user, task]) do |form| %>
   <% if task.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -15,7 +15,7 @@
 <form>
   <div class="mb-6">
     <%= form.label :name, class: "block mb-2 text-sm font-medium text-gray-900" %>
-    <%= form.text_field :name, class:"bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" %>
+    <%= form.text_field :name, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" %>
   </div>
 
   <div class="flex items-start mb-6">
@@ -26,6 +26,6 @@
     </div>
     <%= form.label :status, class: "ml-2 text-sm font-medium text-gray-900 dark:text-gray-300" %>
   </div>
-  <%= form.submit class:"w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center" %>
+  <%= form.submit class: "w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center" %>
 </form>
 <% end %>
