--- a/app/views/user/tasks/_task.html.erb
+++ b/app/views/user/tasks/_task.html.erb
@@ -1,11 +1,11 @@
 <div id="<%= dom_id task %>">
   <div class="block mb-2 p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100">
     <p>
-      <strong>Name:</strong>
+      <strong><%= t('tasks.name') %>:</strong>
       <%= task.name %>
     </p>
     <p>
-      <strong>Status:</strong>
+      <strong><%= t('tasks.status') %>:</strong>
       <%= task.status %>
     </p>
   </div>
