--- a/app/views/user/tasks/index.html.erb
+++ b/app/views/user/tasks/index.html.erb
@@ -18,20 +18,19 @@
       <% end %>
 
       <div class="mb-4">
-        <h1 class="text-4xl font-semibold text-grey-darkest">Todo List</h1>
+        <h1 class="text-4xl font-semibold text-grey-darkest"><%= t('tasks.todo_list') %></h1>
       </div>
 
       <div id="tasks" class="space-y-4">
         <% @tasks.each do |task| %>
-          <%= link_to task do %>
+          <%= link_to user_task_path(task) do %>
             <%= render task %>
           <% end %>
         <% end %>
       </div>
       <div class="flex">
-        <%= link_to "New task", new_task_path, class: "w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
+        <%= link_to t('tasks.new_task'), new_user_task_path, class: "w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center" %>
       </div>
-
     </div>
   </div>
 </div>
