--- a/app/views/user/tasks/new.html.erb
+++ b/app/views/user/tasks/new.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
 	<div class="bg-white rounded shadow p-6 m-4 w-full lg:w-3/4 lg:max-w-lg">
     
@@ -12,7 +10,7 @@
     <br>
 
     <div class="flex">
-      <%= link_to "Back to tasks", tasks_path, class: "w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
+      <%= link_to "Back to tasks", user_tasks_path, class: "w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
     </div>
 
   </div>
