--- a/app/views/user/tasks/show.html.erb
+++ b/app/views/user/tasks/show.html.erb
@@ -22,9 +22,9 @@
     <%= render @task %>
 
     <div class="flex flex-row justify-between">
-        <%= link_to "Edit this task", edit_task_path(@task), class: "flex text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5" %> 
-        <%= link_to "Back to tasks", tasks_path, class: "flex text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
-        <%= button_to "Destroy this task", @task, method: :delete, class: "flex focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5" %>
+        <%= link_to "Edit this task", edit_user_task_path(@task), class: "flex text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5" %>
+        <%= link_to "Back to tasks", user_tasks_path, class: "flex text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
+        <%= button_to "Destroy this task", user_task_path(@task), method: :delete, class: "flex focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5" %>
     </div>
 
   </div>
