--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,17 +1,6 @@
-<div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
-  <div class="bg-white rounded shadow p-6 m-4 w-full lg:w-3/4 lg:max-w-lg">
-
-    <div class="mb-4">
-      <h1 class="text-3xl font-semibold text-grey-darkest">New product</h1>
-    </div>
-
-    <%= render "form", product: @product %>
-
-    <br>
-
-    <div class="flex">
-      <%= link_to "Back to products", admin_products_path, class: "w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
-    </div>
-
+<div class="flex items-center justify-center h-screen">
+  <div class="w-full max-w-sm mx-auto p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+    <h1 class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-black mb-6">New product</h1>
+    <%= render 'form', product: @product %>
   </div>
 </div>
