--- a/app/views/dashboard/_navigation.html.erb
+++ b/app/views/dashboard/_navigation.html.erb
@@ -10,7 +10,7 @@
             <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
           </svg>
         </button>
-        <a href="" class="flex ml-2 md:mr-24">
+        <a href="<%= admin_root_path %>" class="flex ml-2 md:mr-24">
           <img src="https://www.svgrepo.com/show/418102/todo.svg" class="h-8 mr-3" alt="TodoList Logo">
           <span class="self-center text-blue-800 text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
         </a>
