--- a/app/views/user/tasks/_navigation.html.erb
+++ b/app/views/user/tasks/_navigation.html.erb
@@ -10,9 +10,9 @@
             <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
           </svg>
         </button>
-        <a href="" class="flex ml-2 md:mr-24">
+        <a href="<%= user_tasks_path %>" class="flex ml-2 md:mr-24">
           <img src="https://www.svgrepo.com/show/418102/todo.svg" class="h-8 mr-3" alt="TodoList Logo">
-          <span class="self-center text-xl text-blue font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
+          <span class="text-blue-800 self-center  text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
         </a>
         <form action="#" method="GET" class="hidden lg:block lg:pl-3.5">
           <label for="topbar-search" class="sr-only">Search</label>
@@ -268,8 +268,7 @@
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Earnings</a>
               </li>
               <li>
-                <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white", role: "menuitem" %>
-
+                <%= link_to "SignOut", destroy_user_session_url, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white", role: "menuitem" %>
               </li>
             </ul>
           </div>
