--- a/app/views/user/tasks/_navigation.html.erb
+++ b/app/views/user/tasks/_navigation.html.erb
@@ -268,6 +268,12 @@
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Earnings</a>
               </li>
               <li>
+                <a href="<%= url_for(locale: :en) %>" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">English</a>
+              </li>
+              <li>
+                <a href="<%= url_for(locale: :fr) %>" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Français</a>
+              </li>
+              <li>
                 <%= link_to "SignOut", destroy_user_session_url, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white", role: "menuitem" %>
               </li>
             </ul>
