--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -99,100 +99,116 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col">
-        <div class="overflow-x-auto">
-          <div class="inline-block min-w-full align-middle">
-            <div class="overflow-hidden shadow">
-              <table class="min-w-full divide-y divide-gray-200 table-fixed dark:divide-gray-600">
-                <thead class="bg-gray-100 dark:bg-gray-700">
-                <tr>
-                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-                    Product Name
-                  </th>
-                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-                    Category
-                  </th>
-                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-                    Description
-                  </th>
-                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-                    Price
-                  </th>
-                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-                    Actions
-                  </th>
-                </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700">
+<!--      <div class="flex flex-col">-->
+<!--        <div class="overflow-x-auto">-->
+<!--          <div class="inline-block min-w-full align-middle">-->
+<!--            <div class="overflow-hidden shadow">-->
+<!--              <table class="min-w-full divide-y divide-gray-200 table-fixed dark:divide-gray-600">-->
+<!--                <thead class="bg-gray-100 dark:bg-gray-700">-->
+<!--                <tr>-->
+<!--                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">-->
+<!--                    Product Name-->
+<!--                  </th>-->
+<!--                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">-->
+<!--                    Category-->
+<!--                  </th>-->
+<!--                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">-->
+<!--                    Description-->
+<!--                  </th>-->
+<!--                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">-->
+<!--                    Price-->
+<!--                  </th>-->
+<!--                  <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">-->
+<!--                    Actions-->
+<!--                  </th>-->
+<!--                </tr>-->
+<!--                </thead>-->
+<!--                <tbody class="bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700">-->
 
                 <%# products table %>
-                <% @products.each do |product| %>
-                  <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+                <%# @products.each do |product| %>
+<!--                  <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">-->
                     <%# Product name %>
-                    <div class="name">
-                      <td class="p-4 text-sm font-normal text-gray-500 whitespace-nowrap dark:text-gray-400">
-                        <div class="text-base font-semibold text-gray-900 dark:text-white">
-                          <%= product.name %>
-                        </div>
-                      </td>
-                    </div>
+<!--                    <div class="name">-->
+<!--                      <td class="p-4 text-sm font-normal text-gray-500 whitespace-nowrap dark:text-gray-400">-->
+<!--                        <div class="text-base font-semibold text-gray-900 dark:text-white">-->
+                          <%#= product.name %>
+<!--                        </div>-->
+<!--                      </td>-->
+<!--                    </div>-->
                     <%# Category %>
-                    <div class="category">
-                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= product.category %></td>
-                    </div>
+<!--                    <div class="category">-->
+<!--                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%#= product.category %></td>-->
+<!--                    </div>-->
                     <%# Description %>
-                    <div class="description">
-                      <td class="max-w-sm p-4 overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400">
-                        <%= product.description %>
-                      </td>
-                    </div>
+<!--                    <div class="description">-->
+<!--                      <td class="max-w-sm p-4 overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400">-->
+                        <%#= product.description %>
+<!--                      </td>-->
+<!--                    </div>-->
                     <%# Price %>
-                    <div class="price">
-                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= product.price.to_i ? product.price.to_i : product.price %>
-                        DA
-                      </td>
-                    </div>
+<!--                    <div class="price">-->
+<!--                      <td class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"><%#= product.price.to_i ? product.price.to_i : product.price %>-->
+<!--                        DA-->
+<!--                      </td>-->
+<!--                    </div>-->
                     <%# Actions %>
-                    <div class="actions">
-                      <td class="p-4 space-x-2 whitespace-nowrap">
+<!--                    <div class="actions">-->
+<!--                      <td class="p-4 space-x-2 whitespace-nowrap">-->
                         <%# Update button %>
-                        <a href="<%= edit_admin_product_path(product) %>">
-                          <div id="updateProductButton" data-drawer-target="drawer-update-product-default"
-                               data-drawer-show="drawer-update-product-default" aria-controls="drawer-update-product-default"
-                               data-drawer-placement="right"
-                               class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-                            <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                              <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"></path>
-                              <path fill-rule="evenodd"
-                                    d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd">
-                              </path>
-                            </svg>
-                            Update
-                          </div>
-                        </a>
+<!--                        <a href="<%#= edit_admin_product_path(product) %>">-->
+<!--                          <div id="updateProductButton" data-drawer-target="drawer-update-product-default"-->
+<!--                               data-drawer-show="drawer-update-product-default" aria-controls="drawer-update-product-default"-->
+<!--                               data-drawer-placement="right"-->
+<!--                               class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">-->
+<!--                            <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">-->
+<!--                              <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"></path>-->
+<!--                              <path fill-rule="evenodd"-->
+<!--                                    d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd">-->
+<!--                              </path>-->
+<!--                            </svg>-->
+<!--                            Update-->
+<!--                          </div>-->
+<!--                        </a>-->
                         <%# Delete button %>
-                        <div id="deleteProductButton"
-                             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:ring-red-300 dark:focus:ring-red-900">
-                          <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                  d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
-                                  clip-rule="evenodd"></path>
-                          </svg>
-                          <%= button_to "Delete", admin_product_path(product), method: :delete %>
-                        </div>
-                      </td>
-                    </div>
-                  </tr>
-                <% end %>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
+<!--                        <div id="deleteProductButton"-->
+<!--                             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:ring-red-300 dark:focus:ring-red-900">-->
+<!--                          <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">-->
+<!--                            <path fill-rule="evenodd"-->
+<!--                                  d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"-->
+<!--                                  clip-rule="evenodd"></path>-->
+<!--                          </svg>-->
+                          <%#= button_to "Delete", admin_product_path(product), method: :delete %>
+<!--                        </div>-->
+<!--                      </td>-->
+<!--                    </div>-->
+<!--                  </tr>-->
+                <%# end %>
+<!--                </tbody>-->
+<!--              </table>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+      <div class="m-4">
+        <table id="products-datatable" data-source="<%= admin_products_path(format: :json) %>">
+          <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Description</th>
+            <th>Price</th>
+          </tr>
+          </thead>
+          <tbody>
+
+          </tbody>
+        </table>
       </div>
       <%# Add product drawer %>
-      <%= render partial: 'new' %>
-
+      <%#= render partial: 'new' %>
     </main>
   </div>
 </div>
@@ -200,6 +216,4 @@
 <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
 <script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
-
-
 </body>
