--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>My ruby app</title>
+  <title>User</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -12,7 +12,10 @@
 </head>
 
 <body>
+
 <%= yield %>
+
 </body>
+
 
 </html>
