style the layouts

--- a/app/views/user/tasks/index.html.erb
+++ b/app/views/user/tasks/index.html.erb
@@ -1,7 +1,4 @@
-<body>
-
-<%= render partial: 'navigation' %>
-<div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
+<div class="flex pt-16 overflow-hidden bg-white dark:bg-gray-800">
   <div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
     <div class="bg-white rounded shadow p-6 m-4 w-full lg:w-3/4 lg:max-w-lg space-y-4">
 
@@ -34,9 +31,3 @@
     </div>
   </div>
 </div>
-
-<script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
-<script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
-
-</body>
