--- a/app/views/user/tasks/new.html.erb
+++ b/app/views/user/tasks/new.html.erb
@@ -1,3 +1,4 @@
+<div class="flex pt-16 overflow-hidden bg-white dark:bg-gray-800">
 <div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
 	<div class="bg-white rounded shadow p-6 m-4 w-full lg:w-3/4 lg:max-w-lg">
     
@@ -14,4 +15,5 @@
     </div>
 
   </div>
+</div>
 </div>
