--- a/app/views/admin/components/_navigation.html.erb
+++ b/app/views/admin/components/_navigation.html.erb
@@ -10,9 +10,9 @@
             <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
           </svg>
         </button>
-        <a href="<%= user_tasks_path %>" class="flex ml-2 md:mr-24">
+        <a href="<%= admin_root_path %>" class="flex ml-2 md:mr-24">
           <img src="https://www.svgrepo.com/show/418102/todo.svg" class="h-8 mr-3" alt="TodoList Logo">
-          <span class="text-blue-800 self-center  text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
+          <span class="self-center text-blue-800 text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">My project</span>
         </a>
         <form action="#" method="GET" class="hidden lg:block lg:pl-3.5">
           <label for="topbar-search" class="sr-only">Search</label>
@@ -195,15 +195,17 @@
               </svg>
               <div class="text-sm font-medium text-gray-900 dark:text-white">Settings</div>
             </a>
-            <div class="block p-4 text-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600">
-              <svg class="mx-auto mb-1 text-gray-500 w-7 h-7 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                   xmlns="http://www.w3.org/2000/svg">
-                <path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z"></path>
-                <path fill-rule="evenodd" d="M3 8h14v7a2 2 0 01-2 2H5a2 2 0 01-2-2V8zm5 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z"
-                      clip-rule="evenodd"></path>
-              </svg>
-              <div class="text-sm font-medium text-gray-900 dark:text-white">Products</div>
-            </div>
+            <%= link_to admin_products_path do %>
+              <div class="block p-4 text-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600">
+                <svg class="mx-auto mb-1 text-gray-500 w-7 h-7 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z"></path>
+                  <path fill-rule="evenodd" d="M3 8h14v7a2 2 0 01-2 2H5a2 2 0 01-2-2V8zm5 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z"
+                        clip-rule="evenodd"></path>
+                </svg>
+                <div class="text-sm font-medium text-gray-900 dark:text-white">Products</div>
+              </div>
+            <% end %>
 
 
             <a href="#" class="block p-4 text-center rounded-lg hover:bg-gray-100 dark:hover:bg-gray-600">
@@ -254,7 +256,11 @@
                 My name
               </p>
               <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
-                <%= current_user.email %>
+                <% if user_signed_in? %>
+                  <%= current_user.email %>
+                <% elsif admin_signed_in? %>
+                  <%= current_admin.email %>
+                <% end %>
               </p>
             </div>
             <ul class="py-1" role="none">
@@ -274,7 +280,7 @@
                 <a href="<%= url_for(locale: :fr) %>" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white" role="menuitem">Français</a>
               </li>
               <li>
-                <%= link_to "SignOut", destroy_user_session_url, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white", role: "menuitem" %>
+                <%= link_to "SignOut", destroy_admin_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white", role: "menuitem" %>
               </li>
             </ul>
           </div>
