--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,12 +1,4 @@
-<body class="bg-gray-50 dark:bg-gray-800">
-
-<%= render partial: 'dashboard/navigation' %>
-
-<div class="flex pt-16 overflow-hidden bg-gray-50">
-
-  <%= render partial: 'dashboard/sidebar' %>
-
-  <div class="fixed inset-0 z-10 hidden bg-gray-900/50" id="sidebarBackdrop"></div>
+  <div class="fixed inset-0 z-10 hidden " id="sidebarBackdrop"></div>
   <div id="main-content" class="mb-20 relative w-full h-full overflow-y-auto  lg:ml-64">
     <main>
       <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5 dark:bg-gray-800 dark:border-gray-700">
@@ -211,9 +203,5 @@
       <%#= render partial: 'new' %>
     </main>
   </div>
-</div>
 
-<script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
-<script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
-</body>
+
