--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
-<div>
-  <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+<div class="flex items-center justify-center h-screen ">
+  <div class="flex flex-col items-center justify-center max-w-xl p-8 border border-gray-300 rounded-lg shadow-lg dark:border-gray-700">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-center text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+      Welcome to my Ruby App
+    </h1>
+    <p class="mb-6 text-lg font-normal text-center text-gray-500 sm:px-16 dark:text-gray-400">
+      Experience the power of Ruby on Rails with our innovative app. Join us to explore exciting features, streamline your workflows, and enhance your productivity.
+    </p>
+    <a href="<%= new_user_session_path %>" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+      Get started
+      <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+      </svg>
+    </a>
+  </div>
 </div>
