--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
@@ -16,9 +15,24 @@
 
 <body>
 
-<%= yield %>
+<%= render partial: 'admin/components/navigation' %>
 
-<script src="https://code.jquery.com/jquery-3.7.0.js"crossorigin="anonymous"></script>
+<div class="flex pt-16 overflow-hidden">
+
+  <%= render partial: 'admin/components/sidebar' %>
+
+  <%= yield %>
+
+</div>
+
+
+
+<script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
+<script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/datepicker.min.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.7.0.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.25/datatables.min.js"></script>
 <script type="text/javascript">
     jQuery('#products-datatable').dataTable({
