--- a/app/views/user/tasks/edit.html.erb
+++ b/app/views/user/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="flex pt-16 overflow-hidden bg-white dark:bg-gray-800">
 
 <div class="h-100 w-full flex items-center justify-center bg-teal-lightest font-sans">
 	<div class="bg-white rounded shadow p-6 m-4 w-full lg:w-3/4 lg:max-w-lg">
@@ -15,4 +15,5 @@
       <%= link_to "Back to tasks", user_tasks_path, class: "text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5" %>
     </div>
   </div>
+</div>
 </div>
