datatables replace cdn with gem imoprt

--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -9,9 +9,11 @@
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+
 </head>
 
 <body>
+<script src="https://flowbite-admin-dashboard.vercel.app//app.bundle.js"></script>
 <%= render partial: 'user/components/navigation' %>
 <%= yield %>
 
