--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,4 +1,4 @@
-  <div class="fixed inset-0 z-10 hidden " id="sidebarBackdrop"></div>
+<div class="fixed inset-0 z-10 hidden " id="sidebarBackdrop"></div>
   <div id="main-content" class="mb-20 relative w-full h-full overflow-y-auto  lg:ml-64">
     <main>
       <div class="p-4 bg-white block sm:flex items-center justify-between border-b border-gray-200 lg:mt-1.5 dark:bg-gray-800 dark:border-gray-700">
@@ -203,5 +203,22 @@
       <%#= render partial: 'new' %>
     </main>
   </div>
+
+<script>
+    jQuery('#products-datatable').dataTable({
+        "serverSide": true,
+        "ajax": $('#products-datatable').data('source'),
+
+        "pagingType": "full_numbers",
+        "columns": [
+            {data: "id"},
+            {data: "name"},
+            {data: "category"},
+            {data: "description"},
+            {data: "price"}
+        ]
+
+    });
+</script>
 
 
