add product category form

--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -14,10 +14,20 @@
                           placeholder: "29999 DA", required: "" %>
 
       <%# category %>
-      <label for="category-create"
-             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
-      <%= form.text_field :category, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
+      <!-- <label for="category"
+             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label> -->
+      <%#= form.text_field :category, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
                           placeholder: "Category", required: "" %>
+
+      <label for="category_ids"
+             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category id</label>
+      <%#= form.collection_select :category_id, Category.all, :id, :name, {}, multiple: true, prompt: true, class: "tom-select" %>
+
+      <%= form.fields_for :category do |f| %>
+        <%= f.select :categories, Category.pluck(:name, :id), {}, {} %>
+      <% end %>
+
+
 
       <%# description %>
       <label for="description"
